--- a/ECE564_HW/Base.lproj/Main.storyboard
+++ b/ECE564_HW/Base.lproj/Main.storyboard
@@ -10,7 +10,7 @@
         <!--ECE 564-->
         <scene sceneID="nua-hB-o9U">
             <objects>
-                <tableViewController id="UjX-7l-KQS" sceneMemberID="viewController">
+                <tableViewController id="UjX-7l-KQS" customClass="DukePersonTableTableViewController" customModule="ECE564_HW" customModuleProvider="target" sceneMemberID="viewController">
                     <tableView key="view" clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" id="gcJ-eY-46E">
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
@@ -259,47 +259,20 @@
                                 </constraints>
                             </stackView>
                             <stackView opaque="NO" contentMode="scaleToFill" spacing="30" translatesAutoresizingMaskIntoConstraints="NO" id="VFW-Cc-L0k">
-                                <rect key="frame" x="37.5" y="470" width="300" height="70"/>
+                                <rect key="frame" x="151.5" y="470" width="72" height="60"/>
                                 <subviews>
                                     <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="person.crop.circle.fill.badge.exclam" catalog="system" translatesAutoresizingMaskIntoConstraints="NO" id="Nit-0I-efI">
-                                        <rect key="frame" x="0.0" y="0.5" width="70" height="69"/>
+                                        <rect key="frame" x="0.0" y="0.5" width="72" height="59"/>
                                         <color key="tintColor" cocoaTouchSystemColor="scrollViewTexturedBackgroundColor"/>
                                         <constraints>
-                                            <constraint firstAttribute="height" constant="70" id="mPc-s7-6Kv"/>
-                                            <constraint firstAttribute="width" constant="70" id="t69-MU-Ovn"/>
+                                            <constraint firstAttribute="width" constant="72" id="g4y-5o-mXK"/>
+                                            <constraint firstAttribute="height" constant="60" id="qEb-OD-iMF"/>
                                         </constraints>
                                     </imageView>
-                                    <button opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="249" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" adjustsImageSizeForAccessibilityContentSizeCategory="YES" lineBreakMode="wordWrap" translatesAutoresizingMaskIntoConstraints="NO" id="sX0-tb-P52">
-                                        <rect key="frame" x="100" y="0.0" width="90" height="70"/>
-                                        <color key="backgroundColor" systemColor="systemGray4Color" red="0.81960784310000001" green="0.81960784310000001" blue="0.83921568629999999" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
-                                        <fontDescription key="fontDescription" type="system" pointSize="18"/>
-                                        <color key="tintColor" white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
-                                        <state key="normal" title="Add/Update"/>
-                                        <connections>
-                                            <action selector="addPerson:" destination="BYZ-38-t0r" eventType="touchUpInside" id="6Jn-Vy-8Io"/>
-                                        </connections>
-                                    </button>
-                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="19e-FV-jCn">
-                                        <rect key="frame" x="220" y="0.0" width="80" height="70"/>
-                                        <color key="backgroundColor" systemColor="systemGray4Color" red="0.81960784310000001" green="0.81960784310000001" blue="0.83921568629999999" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
-                                        <fontDescription key="fontDescription" type="system" pointSize="18"/>
-                                        <color key="tintColor" white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
-                                        <state key="normal" title="Find"/>
-                                        <connections>
-                                            <action selector="findPerson:" destination="BYZ-38-t0r" eventType="touchUpInside" id="xpO-cl-weL"/>
-                                        </connections>
-                                    </button>
                                 </subviews>
-                                <constraints>
-                                    <constraint firstAttribute="trailing" secondItem="19e-FV-jCn" secondAttribute="trailing" id="1om-JB-E8q"/>
-                                    <constraint firstAttribute="width" constant="300" id="1xZ-kf-MrA"/>
-                                    <constraint firstItem="19e-FV-jCn" firstAttribute="leading" secondItem="sX0-tb-P52" secondAttribute="trailing" constant="30" id="AeL-PK-7yI"/>
-                                    <constraint firstItem="sX0-tb-P52" firstAttribute="leading" secondItem="Nit-0I-efI" secondAttribute="trailing" constant="30" id="hbM-AT-9pG"/>
-                                    <constraint firstAttribute="trailing" secondItem="sX0-tb-P52" secondAttribute="trailing" constant="110" id="w9o-Hn-ezd"/>
-                                </constraints>
                             </stackView>
                             <stackView opaque="NO" contentMode="scaleToFill" distribution="fillEqually" translatesAutoresizingMaskIntoConstraints="NO" id="E28-hR-imV">
-                                <rect key="frame" x="43" y="560" width="289" height="20.5"/>
+                                <rect key="frame" x="43" y="550" width="289" height="20.5"/>
                                 <subviews>
                                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="The output goes here." lineBreakMode="wordWrap" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Lf1-fm-hH0">
                                         <rect key="frame" x="0.0" y="0.0" width="289" height="20.5"/>
@@ -342,11 +315,9 @@
                         </barButtonItem>
                     </navigationItem>
                     <connections>
-                        <outlet property="addButton" destination="sX0-tb-P52" id="2Ze-hz-cvU"/>
                         <outlet property="cancelButton" destination="t28-3Q-6cf" id="Tiz-IK-vrx"/>
                         <outlet property="degreeInput" destination="QwP-6c-dnU" id="awu-bd-HF6"/>
                         <outlet property="emailInput" destination="MJd-WQ-uP9" id="NCz-H1-sIj"/>
-                        <outlet property="findButton" destination="19e-FV-jCn" id="64G-FW-HKj"/>
                         <outlet property="firstNameInput" destination="hse-Wa-S9e" id="d27-z0-qwt"/>
                         <outlet property="fromWhereInput" destination="cgB-po-aeP" id="r1D-pS-etb"/>
                         <outlet property="genderInput" destination="Pok-Wz-jMm" id="eEB-Yy-9Kd"/>
