add cell class and table view layout

--- a/ECE564_HW/Base.lproj/Main.storyboard
+++ b/ECE564_HW/Base.lproj/Main.storyboard
@@ -16,13 +16,52 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
                         <prototypes>
-                            <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="none" indentationWidth="10" reuseIdentifier="DukePersonProtoCell" id="pUP-cK-iAz">
-                                <rect key="frame" x="0.0" y="28" width="375" height="43.5"/>
+                            <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="none" indentationWidth="10" reuseIdentifier="DukePersonProtoCell" id="pUP-cK-iAz" customClass="DukePersonProtoCell" customModule="ECE564_HW" customModuleProvider="target">
+                                <rect key="frame" x="0.0" y="28" width="375" height="64.5"/>
                                 <autoresizingMask key="autoresizingMask"/>
                                 <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" preservesSuperviewLayoutMargins="YES" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="pUP-cK-iAz" id="EMR-EV-hjr">
-                                    <rect key="frame" x="0.0" y="0.0" width="375" height="43.5"/>
+                                    <rect key="frame" x="0.0" y="0.0" width="375" height="64.5"/>
                                     <autoresizingMask key="autoresizingMask"/>
+                                    <subviews>
+                                        <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="ueT-i3-0c6">
+                                            <rect key="frame" x="0.0" y="-28" width="120" height="120.5"/>
+                                            <constraints>
+                                                <constraint firstAttribute="width" secondItem="ueT-i3-0c6" secondAttribute="height" multiplier="1:1" id="A3h-3g-9yP"/>
+                                                <constraint firstAttribute="width" constant="120" id="dLy-Dy-K2a"/>
+                                            </constraints>
+                                        </imageView>
+                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="cGA-G8-qOU">
+                                            <rect key="frame" x="123" y="13" width="46" height="20"/>
+                                            <constraints>
+                                                <constraint firstAttribute="height" constant="20" id="eCm-k1-USo"/>
+                                            </constraints>
+                                            <fontDescription key="fontDescription" name="AvenirNext-DemiBold" family="Avenir Next" pointSize="18"/>
+                                            <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
+                                            <nil key="highlightedColor"/>
+                                        </label>
+                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" lineBreakMode="wordWrap" numberOfLines="5" baselineAdjustment="alignBaselines" adjustsFontForContentSizeCategory="YES" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="J65-jM-uhI">
+                                            <rect key="frame" x="125" y="35" width="232" height="16.5"/>
+                                            <fontDescription key="fontDescription" type="system" pointSize="13"/>
+                                            <nil key="textColor"/>
+                                            <nil key="highlightedColor"/>
+                                        </label>
+                                    </subviews>
+                                    <constraints>
+                                        <constraint firstItem="cGA-G8-qOU" firstAttribute="top" secondItem="EMR-EV-hjr" secondAttribute="topMargin" constant="2" id="2sc-sj-Af8"/>
+                                        <constraint firstAttribute="bottomMargin" secondItem="J65-jM-uhI" secondAttribute="bottom" constant="2" id="6Sk-YO-uEZ"/>
+                                        <constraint firstAttribute="trailingMargin" secondItem="J65-jM-uhI" secondAttribute="trailing" constant="2" id="6xC-hU-Wfx"/>
+                                        <constraint firstItem="cGA-G8-qOU" firstAttribute="leading" secondItem="ueT-i3-0c6" secondAttribute="trailing" constant="3" id="Aw6-Mb-KQb"/>
+                                        <constraint firstItem="J65-jM-uhI" firstAttribute="leading" secondItem="ueT-i3-0c6" secondAttribute="trailing" constant="5" id="EEs-cJ-9wE"/>
+                                        <constraint firstItem="J65-jM-uhI" firstAttribute="top" secondItem="cGA-G8-qOU" secondAttribute="bottom" constant="2" id="LUe-4n-Drw"/>
+                                        <constraint firstItem="ueT-i3-0c6" firstAttribute="leading" secondItem="EMR-EV-hjr" secondAttribute="leading" id="Ltr-Bj-ybv"/>
+                                        <constraint firstItem="ueT-i3-0c6" firstAttribute="centerY" secondItem="EMR-EV-hjr" secondAttribute="centerY" id="xAF-fu-zI1"/>
+                                    </constraints>
                                 </tableViewCellContentView>
+                                <connections>
+                                    <outlet property="pDescriptionLabel" destination="J65-jM-uhI" id="0sT-G8-z4d"/>
+                                    <outlet property="pImageView" destination="ueT-i3-0c6" id="1GP-G1-Y1b"/>
+                                    <outlet property="pNameLabel" destination="cGA-G8-qOU" id="AvX-de-CPf"/>
+                                </connections>
                             </tableViewCell>
                         </prototypes>
                         <connections>
